k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: login-backend-service
spec:
  selector:
    app: login-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP   # internal only
